[package]
name = "rust-programming-part1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    "hello-world",
    "lesson02_variables_types",
    "lesson03_flow_control",
    "lesson04_enums",
    "lesson05_compound_and_collections",
    "lesson06_scope_ownership",
    "lesson07_borrowing",
    "lesson08_functions",
    "lesson09_nested_functions_closures",
    "lesson10_structs_getting_started",
    "lesson11_structs_functionality",
    "lesson12_traits",
    "lesson13_generics", "lesson14_multithreading_concurrency", "lesson15_additional_rust_techniques", "lesson16_csv_parser"]
